features(modified some api routes and api doc)
